gcc/testsuite/gfortran.dg/read_2.f90
@@ -1,0 +1,12 @@
+! { dg-do run }
+!
+! PR fortran/34404
+!
+! Contributed by Joost VandeVondele.
+!
+implicit none
+complex :: x
+character(len=80) :: t="(1.0E-7,4.0E-3)"
+read(t,*) x
+if (real(x) /= 1.0e-7 .or. aimag(x)/=4.0e-3) call abort()
+END
